screen moving bug

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
             <h3>How to Play</h3>
             <p>Controls: Left, Right , Up, Down arrows</p>
             <p>Rules: Eat as many fruits as you can without colliding with the wall or your own body!</p>
+            <p><span>YOU CANNOT TURN INTO YOURSELF</span></p>
             <div style="text-align: center;">
                 <button id="restart">Restart</button>
             </div>
